# mcp-baf

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: README.md  architecture.md  compatibility.md  configuration.md  development.md  getting-started.md  logging-and-audit.md  search-and-index.md  tools-reference.md
scripts/: e2e_check.py  gen_bsl_data.py
src/mcp_baf/: __init__.py  __main__.py  client.py  config.py  installer.py  prompts.py  server.py
src/mcp_baf/bsl/: __init__.py  _functions_data.py
src/mcp_baf/dumpindex/: __init__.py  cache.py  formparser.py  index.py  modulenames.py  synonyms.py
src/mcp_baf/extension_src/: ConfigDumpInfo.xml  Configuration.xml
src/mcp_baf/extension_src/HTTPServices/: MCPService.xml
src/mcp_baf/extension_src/HTTPServices/MCPService/Ext/: Module.bsl
src/mcp_baf/tools/: __init__.py  bsl_help.py  common.py  configuration_info.py  eventlog.py  form.py  metadata.py  object_structure.py  query.py  search_code.py  validate_query.py
tests/: test_bsl.py  test_cache.py  test_client.py  test_config.py  test_dumpindex.py  test_formparser.py  test_installer.py  test_modulenames.py  test_server.py  test_traced.py
tests/testdata/: catalog_list_form.xml  common_form_password.xml  empty_form.xml  register_record_form.xml
