[project]
name = "mcp-baf"
version = "0.1.0"
description = "MCP server for 1C:Enterprise (Python port of feenlace/mcp-1c)"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "andriy4k07" }]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
mcp-baf = "mcp_baf.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_baf"]
